applied client gen to update python sdk
